instance.tf
# resource "aws_instance" "instance_1" {
#     ami = data.aws_ami.ubuntu
#     instance_type = t2.data 
#     security_groups = [ "instance-security-group" ]
# }
